<resources>
    <string name="app_name">ProjetoEventLink</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="title_register">Registrarse</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="ask_language">Escoge tu lenguaje</string>
    <string name="settings">Configuraciones</string>
    <string name="settings_profile">Editar Perfil</string>
    <string name="home">Lista</string>
    <string name="refresh">Recargar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_register">Registrarse</string>
    <string name="button_continue">Continuar</string>
    <string name="button_languages">Idiomas</string>
    <string name="button_profile">Perfil</string>
    <string name="button_notifications">Notificaciones</string>
    <string name="button_save_changes">Guardar Cambios</string>
    <string name="edittext_email">Correo electrónico</string>
    <string name="edittext_password">Constraseña</string>
    <string name="message_forgetpassword">¿Olvidaste tu contraseña?</string>
    <string name="message_welcome">¡Bienvenido a EventLink!</string>
    <string name="message_login_success">¡Inicio de sesión exitoso!</string>
    <string name="message_register_success">¡Registro exitoso!</string>
    <string name="message_become_organizer">Conviértete en usuario organizador.</string>
    <string name="field_first_name">(*) PRIMER NOMBRE</string>
    <string name="field_second_name">SEGUNDO NOMBRE</string>
    <string name="field_first_last_name">(*) PRIMER APELLIDO</string>
    <string name="field_second_last_name">SEGUNDO APELLIDO</string>
    <string name="field_gender">(*) GÉNERO</string>
    <string name="field_genderM">Masculino</string>
    <string name="field_genderF">Femenino</string>
    <string name="field_genderO">Otro</string>
    <string name="field_email">(*) CORREO ELECTRÓNICO</string>
    <string name="field_password">(*) CONSTRASEÑA</string>
    <string name="field_show_password">Mostrar contraseña</string>
    <string name="field_date_of_birth">(*) FECHA DE NACIMIENTO</string>
    <string name="field_document_id">(*) CÉDULA DE IDENTIDAD (UY) O CPF (BR)</string>
    <string name="field_event_title">(*) TÍTULO DEL EVENTO</string>
    <string name="email_required">Correo requerido</string>
    <string name="password_required">Contraseña requerida</string>
    <string name="valid_email_required">Se necesita un correo válido.</string>
    <string name="error_login_failed_email">No existe una cuenta con este correo.</string>
    <string name="error_login_failed_password">La contraseña es inválida, por favor revise.</string>
    <string name="toast_completeall">Por favor, complete todos los datos obligatorios.</string>
    <string name="toast_emailverification">Se ha registrado exitosamente, por favor verifique su correo.</string>
    <string name="toast_writeemail">Por favor, ingrese su correo.</string>
    <string name="toast_writepassword">Por favor, ingrese su contraseña.</string>
    <string name="toast_rewriteemail">Verifique su correo.</string>
    <string name="toast_sucessful_login">Se ha iniciado sesión.</string>
    <string name="toast_sucessful_logout">La sesión se ha cerrado exitosamente.</string>
    <string name="alertb_notverified_email_title">Verificar Correo</string>
    <string name="alertb_notverified_email">Por favor verifique su correo. No puede iniciar sesión si no se verifica.</string>
    <string name="error">Ha ocurrido un error.</string>
    <string name="error_weakpassword">Error: Su contraseña es demasiado débil. Para que su contraseña sea aceptada esta debe contener:\n
         - Al menos 6 caracteres\n
         - Al menos una letra del alfabeto mayúscula.\n
         - Al menos una letra del alfabeto en minúscula.\n
         - Al menos un número.\n
         - Al menos un símbolo.</string>
    <string name="error_invalid_email">Su correo es inválido o ya está en uso, por favor ingrese otro.</string>
    <string name="error_used_email">Ya existe otro usuario con este email, por favor use otro.</string>
    <string name="error_register_failed">El registro ha fallado, por favor intente nuevamente.</string>
    <string name="error_invalid_name">Por favor, ingresa un nombre válido sin números ni símbolos.</string>
    <string name="error_invalid_lastname">Por favor, ingresa un apellido válido sin números ni símbolos.</string>
    <string name="error_invalid_age">Debes tener al menos 14 años para registrarte.</string>
    <string name="interested_count"> interesados</string>
    <string name="no_longer_interested">Ya no te interesa este evento.</string>
    <string name="interested_event">¡Te interesa este evento!</string>
    <string name="interest_update_error">Error al actualizar el interés.</string>
    <string name="report_event_title">Reportar Evento</string>
    <string name="report_hint">Escribe el motivo del reporte: </string>
    <string name="enter_reason_or_cancel">Por favor, ingresa un motivo o cancela.</string>
    <string name="event_id_not_found">No se encontró el ID del evento.</string>
    <string name="organizer_not_found">No se encontró el organizador del evento.</string>
    <string name="organizer_document_missing">No se encontró el documento del organizador.</string>
    <string name="report_success">Reporte enviado exitosamente.</string>
    <string name="report_failure">Error al enviar el reporte.</string>
    <string name="event_not_found">No se encontró el evento.</string>
    <string name="search_event_error">Error al buscar el evento.</string>
    <string name="cancel">Cancelar</string>
    <string name="selectubication">Seleccionar ubicación</string>
    <string name="selectedlocation">Ubicación seleccionada</string>
    <string name="titulo_evento_requerido">Título del evento requerido</string>
    <string name="fecha_inicio_requerida">Fecha de inicio requerida</string>
    <string name="hora_inicio_requerida">Hora de inicio requerida</string>
    <string name="descripcion_requerida">Descripción requerida</string>
    <string name="categorias_requeridas">Categorías requeridas</string>
    <string name="ubicacion_seleccionada">Ubicación seleccionada: \n Lat: %1$s\nLon: %2$s</string>
    <string name="evento_pasado_no_editable">Este evento pertenece a una fecha pasada y no se puede editar.</string>
    <string name="evento_eliminado_con_exito">Evento eliminado con éxito</string>
    <string name="error_eliminar_evento">Error al eliminar el evento: %1$s</string>
    <string name="evento_no_identificado">No se pudo identificar el evento a eliminar</string>
    <string name="campos_obligatorios_vacios">Por favor, complete todos los campos obligatorios</string>
    <string name="confirmacion_eliminar_evento">¿Estás seguro de que deseas eliminar este evento? Esta acción no se puede deshacer.</string>
    <string name="titulo_eliminar_evento">Eliminar Evento</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_al_cargar_eventos">Error al cargar eventos</string>
    <string name="event_data_error">No se recibieron datos del evento.</string>
    <string name="question_button_visibility">Nueva Pregunta</string>
    <string name="ask_question_hint">Escribe tu pregunta</string>
    <string name="enviar">Enviar</string>
    <string name="contestar">Contestar</string>
    <string name="deletequestion">Eliminar Pregunta</string>
    <string name="ask_question_invalid">Por favor, escribe una pregunta válida.</string>
    <string name="question_sent_success">Pregunta enviada exitosamente.</string>
    <string name="question_sent_error">Error al enviar la pregunta.</string>
    <string name="question_id_error">Error al generar el ID de la pregunta.</string>
    <string name="load_questions_error">Error al cargar preguntas.</string>
    <string name="answer_dialog_title">Responder a la pregunta</string>
    <string name="answer_hint">Escribe tu respuesta</string>
    <string name="answer_empty_error">La respuesta no puede estar vacía.</string>
    <string name="answer_updated_success">Respuesta actualizada exitosamente.</string>
    <string name="answer_updated_error">Error al actualizar la respuesta.</string>
    <string name="delete_question_success">Pregunta eliminada exitosamente.</string>
    <string name="delete_question_error">Error al eliminar la pregunta.</string>
    <string name="event_registration_error">Error al registrar evento</string>
    <string name="no_user_data_found">No se encontraron datos del usuario.</string>
    <string name="error_al_cargar_datos">Error al cargar datos:</string>
    <string name="required_fields_missing">Por favor, completa los campos obligatorios.</string>
    <string name="invalid_document">Documento inválido.</string>
    <string name="document_already_registered">El documento ya está registrado.</string>
    <string name="data_updated_successfully">Datos actualizados correctamente.</string>
    <string name="general_error">Error</string>
    <string name="openemail">Abrir correo</string>
    <string name="document_required">Debe tener un documento registrado para crear un evento.</string>
    <string name="error_verifying_document">Error al verificar el documento.</string>
    <string name="login_required">Por favor, inicie sesión para registrar un evento.</string>
    <string name="event_date">Fecha: </string>
    <string name="event_time">Hora: </string>
    <string name="error_loading_events">Error al cargar eventos: </string>
    <string name="report">Reportar</string>
    <string name="error_finding_organizer">Error al buscar al organizador.</string>
    <string name="error_checking_interest">Error al verificar el interés.</string>
    <string name="btn_questions">Preguntas y Respuestas</string>
    <string name="title">Título</string>
    <string name="start_date">Fecha de Inicio</string>
    <string name="end_date">Fecha Final</string>
    <string name="start_time">Hora de Inicio</string>
    <string name="end_time">Hora Final</string>
    <string name="description">Descripción</string>
    <string name="in_person_address">Dirección Presencial</string>
    <string name="virtual_url">URL Virtual</string>
    <string name="categories">Categorías</string>
    <string name="edit_event">Editar Evento</string>
    <string name="report_event">Reportar Evento</string>
    <string name="close">Cerrar</string>
    <string name="select_location_title">Seleccionar ubicación</string>
    <string name="select_location_button">Abrir Mapa para Seleccionar Ubicación</string>
    <string name="save_event">Guardar cambios</string>
    <string name="delete_event">Eliminar evento</string>
    <string name="clear_end_date">Limpiar fecha de finalización</string>
    <string name="clear_end_time">Limpiar hora final</string>
    <string name="list_events_title">Lista de Eventos</string>
    <string name="my_events">Mis Eventos</string>
    <string name="other_events">Otros Eventos</string>
    <string name="event_title">Título del Evento</string>
    <string name="questions_title">Preguntas y Respuestas</string>
    <string name="event_duration_question">¿Evento de un día o varios días?</string>
    <string name="one_day">Un Día</string>
    <string name="multiple_days">Varios Días</string>
    <string name="date">Fecha</string>
    <string name="end_time_question">¿Con horario final?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="time">Horario</string>
    <string name="event_type">Tipo de Evento</string>
    <string name="virtual_event">Virtual</string>
    <string name="in_person_event">Presencial</string>
    <string name="virtual_room_url">URL de la Sala</string>
    <string name="address">Dirección</string>
    <string name="select_location">Seleccionar ubicación</string>
    <string name="register_event">Registrar Evento</string>
</resources>