<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".Telas.EventRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="none">

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Evento de un día o varios días -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_duration_question"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/rgEventoDuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbtnUnDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/one_day" />
            <RadioButton
                android:id="@+id/rbtnVariosDias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple_days" />
        </RadioGroup>

        <!-- Fechas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Fecha de inicio -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:endIconMode="none">
                <EditText
                    android:id="@+id/etFechaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="10dp"
                    android:focusable="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de finalización -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:endIconMode="none">
                <EditText
                    android:id="@+id/etFechaFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"

                    android:focusable="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Tipo de Evento (Virtual o Presencial) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_question"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/rgHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbtnFinalNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/no" />
            <RadioButton
                android:id="@+id/rbtnFinalSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
        </RadioGroup>

        <!-- Horario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <!-- Hora Inicio -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:endIconMode="none">
                <EditText
                    android:id="@+id/etHoraInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="16dp"

                    android:focusable="false"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hora Final -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:endIconMode="none">
                <EditText
                    android:id="@+id/etHoraFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:focusable="false"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Tipo de Evento (Virtual o Presencial) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_type"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/rgTipoEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbtnVirtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/virtual_event" />
            <RadioButton
                android:id="@+id/rbtnPresencial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_person_event" />
        </RadioGroup>

        <!-- URL Virtual -->
        <TextView
            android:id="@+id/tvURLVirtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virtual_room_url"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilURLVirtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <EditText
                android:id="@+id/etURLVirtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Ubicación Presencial -->
        <TextView
            android:id="@+id/tvDireccionPresencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDireccionPresencial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <EditText
                android:id="@+id/etDireccionPresencial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Selección de Ubicación -->
        <TextView
            android:id="@+id/tvTituloUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnSeleccionarUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:text="@string/select_location_button" />


        <!-- Descripción -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="none">
            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Categorías -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="none">
            <EditText
                android:id="@+id/etCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrarEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_event"
            android:layout_marginTop="16dp" />



    </LinearLayout>
</ScrollView>
