<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Título "Registrarse" -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"/>

        <!-- Campo de Primer Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_first_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Campo de Segundo Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_second_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Campo de Primer Apellido -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_first_last_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etFirstLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Campo de Segundo Apellido -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_second_last_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etSecondLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Campo de Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_email"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Campo de Fecha de Nacimiento -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_date_of_birth"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <!-- Campo de Fecha de Nacimiento -->
        <EditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:backgroundTint="@color/colorPrimary"
            android:drawableEnd="@drawable/ic_calendar"
            android:layout_marginBottom="16dp"/>


        <!-- Campo de Cédula de Identidad o CPF -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_document_id"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etDocumentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <!-- Botón de Registro -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>
</ScrollView>
