<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Telas.EventListActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/list_events_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RadioGroup para opciones de selección -->
    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioMyEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_events"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioOtherEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_events" />
    </RadioGroup>

    <!-- ScrollView que contiene el RecyclerView -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/radioGroupOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- RecyclerView para mostrar los eventos -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
